--- a/flask_host/application/templates/layout.html
+++ b/flask_host/application/templates/layout.html
@@ -7,6 +7,7 @@
 		<h1>{% block h1 %}{% endblock %}{{ title }}</h1>
 
 		{%block body%}{% endblock %}
+		<p>xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
 		<br>
 	</body>
 </html>
